PROJECT(ZETER)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE(CheckIncludeFiles)
INCLUDE(CheckFunctionExists)
INCLUDE(CheckTypeSize)
INCLUDE(CTest)
INCLUDE(InstallRequiredSystemLibraries)

ENABLE_TESTING()

SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_VENDOR "Henning Rauch")
SET(CPACK_RESOURCE_FILE_LICENSE LICENSE.txt)

IF(CPack_CMake_INCLUDED)
ELSE(CPack_CMake_INCLUDED)
  INCLUDE(CPack)
  SET(CPack_CMake_INCLUDED 1)
ENDIF(CPack_CMake_INCLUDED)

ADD_SUBDIRECTORY(doxygen)
ADD_SUBDIRECTORY(src build-src)
#ADD_SUBDIRECTORY(tests build-tests)
ADD_SUBDIRECTORY(include build-include)
