INSTALL(FILES  
        synchronization/threadSafeElement.h
        synchronization/lockableElement.h
        memory/arrayAllocator.h
        memory/arrayMetaData.h
        memory/arrayObject.h
        memory/growthByNextPowerOfTwo.h
        collections/lock_free_queue.h
        DESTINATION include/
        )

